--- a/src/view/css/Contato.css
+++ b/src/view/css/Contato.css
@@ -1,8 +1,13 @@
 body {
     font-family: sans-serif;
    justify-content: center;
-}
+   display: grid;
 
+}
+formulario {
+display: flex;
+justify-content: center;
+}
 
 form {
     font-size: 16px;
