--- a/src/view/css/Contato.css
+++ b/src/view/css/Contato.css
@@ -12,7 +12,7 @@ justify-content: center;
 form {
     font-size: 16px;
     background: black;
-    
+    width: 33%;
     margin: 150px;
     padding: 20px;
     border-radius: 5px;
