--- a/src/view/css/Contato.css
+++ b/src/view/css/Contato.css
@@ -14,7 +14,7 @@ form {
     background: black;
     width: 33%;
     margin: 150px;
-    padding: 20px;
+    padding: auto;
     border-radius: 5px;
     justify-content: center;
     text-align: center;
