--- a/src/view/css/Contato.css
+++ b/src/view/css/Contato.css
@@ -13,8 +13,8 @@ form {
     font-size: 16px;
     background: black;
     width: 33%;
-    margin: 150px;
-    padding: auto;
+    margin: auto;
+    padding: 20px;
     border-radius: 5px;
     justify-content: center;
     text-align: center;
