--- a/src/view/css/Footer.css
+++ b/src/view/css/Footer.css
@@ -7,7 +7,7 @@ footer {
     position: sticky;
     top: 100%;
     bottom: 100%;
-    background-color: #24262b;
+    
     flex-grow: 0;
     flex-shrink: 0;
 }
@@ -122,3 +122,5 @@ footer {
 
     }
 }
+
+/* #24262b; */
