--- a/src/view/css/Layout.css
+++ b/src/view/css/Layout.css
@@ -46,6 +46,7 @@ h1 {
     font-size: 18px;
     letter-spacing: 0.5px;
     text-decoration: none;
+    list-style: none;
     text-transform: capitalize;
     color: #bbbbbb;
     padding: 0 10px;
@@ -72,9 +73,54 @@ h1 {
     color: #ffffff;
 }
 
+.SearchBox {
+    transform: translate(-10%, -5%);
+    background: #ffffff33;
+    height: 40px;
+    border-radius: 40px;
+    padding: 1px;
+}
+
+.SearchBtn {
+    color: #e91e63;
+    float: right;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #ffffff33;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 2s;
+}
+
+.SearchTxt {
+    border: none;
+    background: none;
+    outline: none;
+    float: left;
+    padding-left: 10px;
+    color: #ffffff;
+    font-size: 16px;
+    transition: 0,4s;
+    line-height: 40px;
+    width: 240px;
+}
+
+.SearchBox:hover > .SearchTxt {
+    width: 240px;
+    padding: 0 6px;
+}
+
+.SearchBox:hover > .SearchBtn {
+    background: #ffffff;
+
+}
+
 body {
     background: rgb(0, 0, 0);
     background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(36, 38, 43, 1) 47%, rgba(0, 0, 0, 1) 100%);
+    background-repeat: no-repeat;
     overflow-x: hidden;
     color:#bbbbbb
 }
