--- a/src/view/css/Home.css
+++ b/src/view/css/Home.css
@@ -7,6 +7,7 @@
 
 .SlideCarousel {
     padding: 0.5rem;
+    margin: 4rem;
 }
 
 .Spotlight {
@@ -39,6 +40,9 @@ a {
         flex-direction: column;
         overflow-x: hidden;
     }
+    .SlideCarousel { 
+        margin: 0;
+        padding-top: 2rem;
  }
 @media only screen and (max-device-width: 768px){
     .Spot {
