--- a/src/view/css/Home.css
+++ b/src/view/css/Home.css
@@ -43,7 +43,9 @@ a {
     .SlideCarousel { 
         margin: 0;
         padding-top: 2rem;
+    }
  }
+
 @media only screen and (max-device-width: 768px){
     .Spot {
         flex-direction: column;
