--- a/src/view/css/Home.css
+++ b/src/view/css/Home.css
@@ -16,7 +16,7 @@
     flex-wrap: wrap;
     align-content: center;
     justify-content: center;
-    margin-bottom: 10em;
+    margin-bottom: 3%;
     padding: 1em;
 
 }
