--- a/src/view/css/Layout.css
+++ b/src/view/css/Layout.css
@@ -120,7 +120,7 @@ h1 {
 body {
     background: rgb(0, 0, 0);
     background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(36, 38, 43, 1) 47%, rgba(0, 0, 0, 1) 100%);
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     overflow-x: hidden;
     color:#bbbbbb
 }
