--- a/src/view/css/Contato.css
+++ b/src/view/css/Contato.css
@@ -21,7 +21,7 @@ justify-content: center;
     padding: 3%;
     border-radius: 5px;
     box-shadow: 8px 8px 8px 8px rgb(0 0 0 / 20%);
-    width: 33%;
+    width: 50%;
  
 }
 
@@ -44,6 +44,12 @@ label {
 form h1 {
     margin: 10px;
     color: white;
+    
+}
+form span {
+    margin: 10px;
+    font-size: 35px;
+    margin-bottom: 20px;
     
 }
 
