--- a/src/view/css/Sobre.css
+++ b/src/view/css/Sobre.css
@@ -3,10 +3,24 @@ span{
 }
 
 .img{
-    width: 120px;
+    width: 100%;
+    margin-bottom: 10%;
     border-radius: 50%;
 }
+h5{
+    margin-bottom: 10%;
 
+}
+.cd {
+    text-align: center;
+    display: flow-root;
+}
 .ct{
     text-align: center;
+}
+.grupo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    height: 35%;
 }
