--- a/src/view/css/Layout.module.css
+++ b/src/view/css/Layout.module.css
@@ -8,7 +8,7 @@
 .header {
     color: #ffffff;
     overflow: hidden;
-    padding: 2%;
+    display: flex;
 }
 
 h1 {
@@ -16,7 +16,7 @@ h1 {
 }
 
 .navMenu {
-    margin-top: 2%;
+    margin-top: 3rem;
     width: 100vw;
     display: flex;
     flex-direction: row;
@@ -25,27 +25,21 @@ h1 {
     align-items: center;
     position: sticky;
     color: #ffffff;
-    
+    align-items: inherit;
 }
 
 .navLogo {
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
     height: 82.7px;
     width: 381.5px;
-    transform: translate(-10%, 10%);
-
-}
-
-.navLogo a {
-    color: #e91e63;
+    align-self: flex-start;
 }
 
 .btn {
     margin: 0.5em;
     outline-style: none;
     justify-content: space-around;
+    align-self: center;
     position: relative;
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
@@ -54,8 +48,6 @@ h1 {
     list-style: none;
     text-transform: capitalize;
     color: #bbbbbb;
-    padding: 0 10px;
-    transform: translate(-70%, 30%);
 
 }
 
@@ -113,11 +105,6 @@ h1 {
     width: 240px;
 }
 
-input.searchTxt:hover {
-    border-radius: 40px 40px 40px 40px;
-    box-shadow: 1px 2px 5px 0px rosybrown;
-}
-
 .searchBox:hover>.searchTxt {
     width: 240px;
     padding: 0 6px;
@@ -140,27 +127,41 @@ body {
 
 /* smartphones, iPhone, portrait 480x320 phones */
 @media only screen and (max-device-width: 480px) {
-    .navMenu {
+    .header {
+        display: flex;
         flex-direction: column;
-        overflow: hidden;
-        justify-content: center;
-        transform: none;
-        padding-bottom: 2em;
     }
 
-    .navLogo {
+    .navMenu {
+        margin-top: 3rem;
+        display: flex;
+        flex-direction: column;
         justify-content: center;
-        transform: translate(-10%, 10%);
-
+        align-items: center;
+        position:sticky;
+        color: #ffffff;
+        align-items: center;
     }
+
 
 }
 
+/* Tablet, iPad */
 @media only screen and (max-device-width: 768px) {
-    .navMenu {
+    .header {
+        display: flex;
         flex-direction: column;
-        overflow: hidden;
     }
 
+    .navMenu {
+        margin-top: 3rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position:sticky;
+        color: #ffffff;
+        align-items: center;
+    }
 
 }
