--- a/src/view/css/Home.module.css
+++ b/src/view/css/Home.module.css
@@ -1,76 +1,124 @@
+h2 {
+    font-family: 'Poppins', sans-serif;
+    justify-content:flex-start;
+    align-items: center;
+    cursor: pointer;
+    padding-bottom: 0.5em;
+
+} 
+
 .homePage {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: inherit;
+    align-items: inherit;
 }
 
 .slideCarousel {
     width: 75%;
-    margin-top: 4em;
-}
-
-.spotLight {
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-content: center;
+    margin-top: 8em;
+    margin-bottom: 8em;
+    cursor: pointer;
     justify-content: center;
-    margin-bottom: 8%;
-    margin-top: 5%;
-    display: flex;
-    position: relative;
-    padding: 5%;
+    align-self: center;
+
 }
 
-.img.cd.card{
-width: 100%;
-}
-.col-sm {
+.card {
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 1em;
+}
+
+.cardBody {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
     padding: 2em;
-    object-fit: contain;   
-   
 }
 
-h5 {
+.card h5 {
     color: #bbbbbb;
     padding-top: 0.5em;
+    cursor: pointer;
 }
 
-.cardTxt a {
-    color: #bbbbbb;
-    font-size: 13px;
-    padding-bottom: 0.5em;
-}
-.cd{
+.card a {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    
-    margin: 10px;
-    padding: 3%;
-    border-radius: 5px;
-    box-shadow: 8px 8px 8px 8px rgb(0 0 0 / 20%);
-    width: 33%;
+    color: #bbbbbb;
+    font-size: 13px;
+    width: 320px;
+    height: 170px;
+    justify-content: flex-start;
 }
-.img{
-    width: 100%;
+
+.card img {
+    vertical-align: middle;
+    width: inherit;
+    width: 320px;
+    height: 170px;
+    justify-content: space-between;
+    cursor: pointer;
 }
+
+.top10 {
+    margin-bottom: 10em;
+    padding-left: 0;
+}
+
+.top10 li {
+    list-style: none;
+    cursor: pointer;
+    justify-content:space-around
+}
+
+
+
+
 
 @media only screen and (max-device-width: 480px) {
-    .spotLight {
+    .spotlight {
         flex-direction: column;
         overflow-x: hidden;
     }
-    .slideCarousel { 
-        margin: 0;
-        padding-top: 2rem;
-    }
- }
 
-@media only screen and (max-device-width: 768px){
-    .spot {
+    .slideCarousel {
+        width: 100%;
+        margin-top: 2em;
+        margin-bottom: 2em;
+        justify-content: center;
+        align-self: center;
+    }
+
+    .card {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media only screen and (max-device-width: 768px) {
+    .spotlight {
         flex-direction: column;
         overflow-x: hidden;
+    }
+
+    .slideCarousel {
+        width: 100%;
+        margin-top: 2em;
+        margin-bottom: 2em;
+        justify-content: center;
+        align-self: center;
+    }
+
+    .card {
+        display: flex;
+        flex-direction: column;
     }
 }
