--- a/src/view/css/Footer.module.css
+++ b/src/view/css/Footer.module.css
@@ -7,7 +7,7 @@ footer {
     position: sticky;
     bottom: 1em;
     width: 100%;
-    
+    margin-top: 3rem;
     flex-grow: 0;
     flex-shrink: 0;
 }
@@ -123,4 +123,3 @@ footer {
     }
 }
 
-/* #24262b; */
