--- a/src/view/css/Home.module.css
+++ b/src/view/css/Home.module.css
@@ -17,7 +17,7 @@ h2 {
 
 .slideCarousel {
     width: 75%;
-    margin-top: 8em;
+    margin-top: 3em;
     margin-bottom: 8em;
     cursor: pointer;
     justify-content: center;
@@ -69,14 +69,14 @@ h2 {
 }
 
 .top10 {
-    margin-bottom: 10em;
+    margin-bottom: 3rem;
     padding-left: 0;
 }
 
 .top10 li {
     list-style: none;
     cursor: pointer;
-    justify-content:space-around
+    justify-content:space-around;
 }
 
 
