--- a/src/view/css/Sobre.css
+++ b/src/view/css/Sobre.css
@@ -24,3 +24,18 @@ h5{
     justify-content: space-evenly;
     height: 35%;
 }
+.social {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    }
+    
+    .social a{
+    margin: 5px;
+    }
+    
+    .social img{
+    width: 35px;
+    height: 35px;
+    width: 32px;
+    }
