--- a/src/view/css/Contato.css
+++ b/src/view/css/Contato.css
@@ -46,7 +46,11 @@ form h1 {
     color: white;
     
 }
-
+span {
+    font-size: 25px;
+    text-align: center;
+    padding: 3%;
+}
 
 input:hover, textarea:hover, input:focus, textarea:focus {
     border-color: grey;
