--- a/src/view/css/Contato.css
+++ b/src/view/css/Contato.css
@@ -46,7 +46,7 @@ form h1 {
     color: white;
     
 }
-span {
+modal-content.span {
     font-size: 25px;
     text-align: center;
     padding: 3%;
