--- a/src/view/css/Contato.css
+++ b/src/view/css/Contato.css
@@ -56,3 +56,6 @@ input:hover, textarea:hover, input:focus, textarea:focus {
 .modal-body {
     color: black;
 }
+.ModalHeader {
+    color: #e91e63;
+}
