--- a/src/view/css/Sobre.css
+++ b/src/view/css/Sobre.css
@@ -39,3 +39,21 @@ h5{
     height: 35px;
     width: 32px;
     }
+
+    .socialLinks a {
+        display: inline-block;
+        height: 40px;
+        width: 40px;
+        background-color: rgba(255, 255, 255, 0.2);
+        margin: 0 10px 10px 0;
+        text-align: center;
+        line-height: 40px;
+        border-radius: 50%;
+        color: #ffffff;
+        transition: all 0.5s ease;
+    }
+    
+    .socialLinks a:hover {
+        color: #24262b;
+        background-color: #ffffff;
+    }
