--- a/src/view/css/Contato.css
+++ b/src/view/css/Contato.css
@@ -56,7 +56,7 @@ input:hover, textarea:hover, input:focus, textarea:focus {
 .modal-body {
     color: black;
 }
-.ModalHeader h5{
+.modal-title {
     color: #e91e63;
     text-aling: center;
     
