--- a/src/view/css/Layout.module.css
+++ b/src/view/css/Layout.module.css
@@ -31,7 +31,7 @@ h1 {
 
 .navLogo {
     display: flex;
-    height: 82.7px;
+    height: 110%;
     width: 381.5px;
     align-self: flex-start;
 }
