--- a/src/view/css/Layout.module.css
+++ b/src/view/css/Layout.module.css
@@ -143,7 +143,9 @@ body {
         display: flex;
         flex-direction: column;
     }
-
+  .searchBox {
+margin-left: 10%;
+    }
     .navMenu {
         margin-top: 3rem;
         display: flex;
@@ -176,7 +178,11 @@ body {
         flex-direction: column;
         
     }
-
+    
+    .searchBox {
+margin-left: 10%;
+    }
+    
     .btn {
         transform: none;
     }
