--- a/src/view/css/Sobre.css
+++ b/src/view/css/Sobre.css
@@ -57,3 +57,17 @@ h5{
         color: #24262b;
         background-color: #ffffff;
     }
+@media only screen and (max-device-width: 480px) {
+    .grupo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
+}
+@media only screen and (max-device-width: 768px) {
+    .grupo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
+}
