--- a/src/view/css/Home.module.css
+++ b/src/view/css/Home.module.css
@@ -1,124 +1,68 @@
-h2 {
-    font-family: 'Poppins', sans-serif;
-    justify-content:flex-start;
-    align-items: center;
-    cursor: pointer;
-    padding-bottom: 0.5em;
-
-} 
-
 .homePage {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    justify-content: inherit;
-    align-items: inherit;
 }
 
 .slideCarousel {
     width: 75%;
-    margin-top: 3em;
-    margin-bottom: 8em;
-    cursor: pointer;
+    margin-top: 4em;
+    margin-bottom: 2em;
+}
+
+.spotLight {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
     justify-content: center;
-    align-self: center;
-
+    margin-bottom: 3%;
+    padding: 1em;
+    display: flex;
+    position: relative;
+    width: 70%;
+   
 }
 
-.card {
+.col-sm {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-    height: 100%;
-    margin-bottom: 1em;
-}
-
-.cardBody {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
     padding: 2em;
+    object-fit: contain;   
+   
 }
 
-.card h5 {
+h5 {
     color: #bbbbbb;
     padding-top: 0.5em;
-    cursor: pointer;
 }
 
-.card a {
-    display: flex;
-    flex-direction: column;
+.cardTxt a {
     color: #bbbbbb;
     font-size: 13px;
-    width: 320px;
-    height: 170px;
-    justify-content: flex-start;
+    padding-bottom: 0.5em;
 }
+.card {
+    display: inline-block;
+    flex-direction: row;
+    width: 40%;
+    height: 40%;
 
-.card img {
-    vertical-align: middle;
-    width: inherit;
-    width: 320px;
-    height: 170px;
-    justify-content: space-between;
-    cursor: pointer;
 }
-
-.top10 {
-    margin-bottom: 3rem;
-    padding-left: 0;
-}
-
-.top10 li {
-    list-style: none;
-    cursor: pointer;
-    justify-content:space-around;
-}
-
-
-
-
 
 @media only screen and (max-device-width: 480px) {
-    .spotlight {
+    .spotLight {
         flex-direction: column;
         overflow-x: hidden;
     }
-
-    .slideCarousel {
-        width: 100%;
-        margin-top: 2em;
-        margin-bottom: 2em;
-        justify-content: center;
-        align-self: center;
+    .slideCarousel { 
+        margin: 0;
+        padding-top: 2rem;
     }
+ }
 
-    .card {
-        display: flex;
-        flex-direction: column;
-    }
-}
-
-@media only screen and (max-device-width: 768px) {
-    .spotlight {
+@media only screen and (max-device-width: 768px){
+    .spot {
         flex-direction: column;
         overflow-x: hidden;
-    }
-
-    .slideCarousel {
-        width: 100%;
-        margin-top: 2em;
-        margin-bottom: 2em;
-        justify-content: center;
-        align-self: center;
-    }
-
-    .card {
-        display: flex;
-        flex-direction: column;
     }
 }
