--- a/src/view/css/Layout.module.css
+++ b/src/view/css/Layout.module.css
@@ -8,7 +8,6 @@
 .header {
     color: #ffffff;
     overflow: hidden;
-    display: flex;
 }
 
 h1 {
@@ -16,7 +15,7 @@ h1 {
 }
 
 .navMenu {
-    margin-top: 5rem;
+    margin-top: 3rem;
     width: 100vw;
     display: flex;
     flex-direction: row;
@@ -25,22 +24,26 @@ h1 {
     align-items: center;
     position: sticky;
     color: #ffffff;
-    align-items: inherit;
-    margin-bottom: 3rem;
 }
 
 .navLogo {
     display: flex;
+    flex-direction: row;
+    align-items: flex-start;
     height: 82.7px;
     width: 381.5px;
-    align-self: flex-start;
+    transform: translate(-20%, 10%);
+
+}
+
+.navLogo a {
+    color: #e91e63;
 }
 
 .btn {
     margin: 0.5em;
     outline-style: none;
     justify-content: space-around;
-    align-self: center;
     position: relative;
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
@@ -49,7 +52,8 @@ h1 {
     list-style: none;
     text-transform: capitalize;
     color: #bbbbbb;
-    transform: translate(-40%);
+    padding: 0 10px;
+    transform: translate(-70%, 30%);
 
 }
 
@@ -79,7 +83,6 @@ h1 {
     height: 40px;
     border-radius: 40px;
     padding: 1px;
-    margin-bottom: 1em;
 }
 
 .searchBtn {
@@ -108,13 +111,9 @@ h1 {
     width: 240px;
 }
 
-input.searchTxt:hover {
-    border-radius: none;
-    box-shadow: none;
-}
-input.searchTxt:focus {
-    border-radius: none;
-    box-shadow: none;
+input.Layout_searchTxt__S4cf6:hover {
+    border-radius: 40px 40px 40px 40px;
+    box-shadow: 1px 2px 5px 0px rosybrown;
 }
 
 .searchBox:hover>.searchTxt {
@@ -139,52 +138,27 @@ body {
 
 /* smartphones, iPhone, portrait 480x320 phones */
 @media only screen and (max-device-width: 480px) {
-    .header {
-        display: flex;
-        flex-direction: column;
-    }
-  .searchBox {
-margin-left: 10%;
-    }
     .navMenu {
-        margin-top: 3rem;
-        display: flex;
         flex-direction: column;
-        
-        
-    }
-    .navLogo {
-     height: 15%;
-    }
-    .btn {
+        overflow: hidden;
+        justify-content: center;
         transform: none;
+        padding-bottom: 2em;
     }
 
+    .navLogo {
+        justify-content: center;
+        transform: translate(-10%, 10%);
+
+    }
 
 }
 
-/* Tablet, iPad */
 @media only screen and (max-device-width: 768px) {
-    .header {
-        display: flex;
-        flex-direction: column;
-    }
-.navLogo {
-     height: 15%;
-    }
     .navMenu {
-        margin-top: 3rem;
-        display: flex;
         flex-direction: column;
-        
+        overflow: hidden;
     }
-    
-    .searchBox {
-margin-left: 10%;
-    }
-    
-    .btn {
-        transform: none;
-    }
+
 
 }
