--- a/src/view/css/Layout.module.css
+++ b/src/view/css/Layout.module.css
@@ -111,9 +111,9 @@ h1 {
     width: 240px;
 }
 
-input.Layout_searchTxt__S4cf6:hover {
-    border-radius: 40px 40px 40px 40px;
-    box-shadow: 1px 2px 5px 0px rosybrown;
+input.searchTxt:hover {
+    border-radius: none;
+    box-shadow: none;
 }
 
 .searchBox:hover>.searchTxt {
