--- a/src/view/css/Sobre.css
+++ b/src/view/css/Sobre.css
@@ -1,7 +1,6 @@
 span{
     color:rgb(233 30 99);
 }
-
 .img{
     width: 100%;
     margin-bottom: 10%;
@@ -22,40 +21,49 @@ h5{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    height: 35%;
+}
+.socialLinks a {
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: rgba(255, 255, 255, 0.2);
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #ffffff;
+    transition: all 0.5s ease;
+}
+    
+.socialLinks a:hover {
+   color: #24262b;
+   background-color: #ffffff;
 }
 
-
-    .socialLinks a {
-        display: inline-block;
-        height: 40px;
-        width: 40px;
-        background-color: rgba(255, 255, 255, 0.2);
-        margin: 0 10px 10px 0;
-        text-align: center;
-        line-height: 40px;
-        border-radius: 50%;
-        color: #ffffff;
-        transition: all 0.5s ease;
-    }
-    
-    .socialLinks a:hover {
-        color: #24262b;
-        background-color: #ffffff;
-    }
-
-    @media(max-width:800px){
-
-        .container{
-            justify-content: space-around !important;
-            text-align: center;
-
+@media(max-width:1100px){
+.grupo {
+   display: grid;
+   grid-template-columns: repeat(2, calc(50.0%));
+   flex-direction: row;
+   justify-content: space-evenly;
         }
-        .grupo {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-
+.cd {
+    width: 60%;
     }
+
+}
+
+@media(max-width:800px){
+
+.container{
+    justify-content: space-around !important;
+    text-align: center;
+    }
+.grupo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    }
+
+}
