--- a/src/view/css/Home.module.css
+++ b/src/view/css/Home.module.css
@@ -83,42 +83,55 @@ h2 {
 
 
 
+/* smartphones, iPhone, portrait 480x320 phones */
 @media only screen and (max-device-width: 480px) {
-    .spotlight {
-        flex-direction: column;
-        overflow-x: hidden;
-    }
-
-    .slideCarousel {
-        width: 100%;
-        margin-top: 2em;
-        margin-bottom: 2em;
-        justify-content: center;
-        align-self: center;
-    }
-
-    .card {
+    .header {
         display: flex;
         flex-direction: column;
     }
+
+    .navMenu {
+        margin-top: 3rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position:sticky;
+        color: #ffffff;
+        align-items: center;
+    }
+    
+    .btn {
+        transform: none;
+    }
+
+
 }
 
+/* Tablet, iPad */
 @media only screen and (max-device-width: 768px) {
-    .spotlight {
-        flex-direction: column;
-        overflow-x: hidden;
-    }
-
-    .slideCarousel {
-        width: 100%;
-        margin-top: 2em;
-        margin-bottom: 2em;
-        justify-content: center;
-        align-self: center;
-    }
-
-    .card {
+    .header {
         display: flex;
         flex-direction: column;
     }
-}
+
+    .navMenu {
+        margin-top: 3rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position:sticky;
+        color: #ffffff;
+        align-items: center;
+    }
+
+    .navLogo img {
+        width: 90%;
+        justify-content: center;
+
+    }
+
+    .btn {
+        transform: none;
+    }
