--- a/src/view/css/Layout.module.css
+++ b/src/view/css/Layout.module.css
@@ -138,27 +138,55 @@ body {
 
 /* smartphones, iPhone, portrait 480x320 phones */
 @media only screen and (max-device-width: 480px) {
-    .navMenu {
+    .header {
+        display: flex;
         flex-direction: column;
-        overflow: hidden;
+    }
+
+    .navMenu {
+        margin-top: 3rem;
+        display: flex;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
+        position:sticky;
+        color: #ffffff;
+        align-items: center;
+    }
+    
+    .btn {
         transform: none;
-        padding-bottom: 2em;
     }
 
-    .navLogo {
-        justify-content: center;
-        transform: translate(-10%, 10%);
-
-    }
 
 }
 
+/* Tablet, iPad */
 @media only screen and (max-device-width: 768px) {
-    .navMenu {
+    .header {
+        display: flex;
         flex-direction: column;
-        overflow: hidden;
     }
 
+    .navMenu {
+        margin-top: 3rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position:sticky;
+        color: #ffffff;
+        align-items: center;
+    }
+
+    .navLogo img {
+        width: 90%;
+        justify-content: center;
+
+    }
+
+    .btn {
+        transform: none;
+    }
 
 }
