--- a/src/view/css/Footer.module.css
+++ b/src/view/css/Footer.module.css
@@ -7,7 +7,7 @@ footer {
     position: sticky;
     bottom: 1em;
     width: 100%;
-    
+    padding-top: 3em;
     flex-grow: 0;
     flex-shrink: 0;
 }
