--- a/src/view/css/Layout.module.css
+++ b/src/view/css/Layout.module.css
@@ -31,9 +31,9 @@ h1 {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    height: 82.7px;
-    width: 381.5px;
-    transform: translate(0%, 10%);
+    height: 100px;
+    width: 90%;
+    
 
 }
 
