--- a/src/view/css/Contato.css
+++ b/src/view/css/Contato.css
@@ -53,3 +53,6 @@ input:hover, textarea:hover, input:focus, textarea:focus {
     color: black;
     font-weight: bold;
 }
+.ModalHeader {
+color: black
+}
