--- a/src/view/css/Layout.module.css
+++ b/src/view/css/Layout.module.css
@@ -144,6 +144,15 @@ body {
         display: flex;
         flex-direction: column;
     }
+    
+     .navLogo {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: row;
+    height: 85px;
+    width: 100%;
+    margin-left: 8px;
+    }
 
     .navMenu {
         margin-top: 3rem;
@@ -159,7 +168,9 @@ body {
     .btn {
         transform: none;
     }
-
+.seachBox {
+    transform: translate(0%,15%)
+    }
 
 }
 
@@ -181,14 +192,21 @@ body {
         align-items: center;
     }
 
-    .navLogo img {
-        width: 90%;
-        justify-content: center;
-
+    
+    .navLogo {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: row;
+    height: 85px;
+    width: 100%;
+    margin-left: 8px;
     }
-
+    
     .btn {
         transform: none;
+    }
+    .seachBox {
+    transform: translate(0%,15%)
     }
 
 }
