--- a/src/view/css/Layout.module.css
+++ b/src/view/css/Layout.module.css
@@ -168,7 +168,7 @@ body {
     .btn {
         transform: none;
     }
-.seachBox {
+.searchBox {
     transform: translate(0%,15%)
     }
 
@@ -205,7 +205,7 @@ body {
     .btn {
         transform: none;
     }
-    .seachBox {
+    .searchBox {
     transform: translate(0%,15%)
     }
 
