--- a/src/view/css/Contato.css
+++ b/src/view/css/Contato.css
@@ -53,9 +53,9 @@ input:hover, textarea:hover, input:focus, textarea:focus {
     color: black;
     font-weight: bold;
 }
-.ModalHeader {
+.modal-header {
 color: black
 }
-.ModalBody {
+.modal-body {
 color: black
 }
