--- a/src/view/css/Filmes.css
+++ b/src/view/css/Filmes.css
@@ -40,6 +40,7 @@ padding-top: 10px;
 .listafilme {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 h1 {
     margin-left: 50px;
